// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Puebas con el componente <GifExpertApp /> Debe mostrar correctamente el GifExpertApp 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Puebas con el componente <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="one punch"
      key="one punch"
    />
    <GifGrid
      category="attack on titan"
      key="attack on titan"
    />
  </ol>
</Fragment>
`;
